aligning product details page correctly

--- a/src/app/Components/homepage/homepage.component.css
+++ b/src/app/Components/homepage/homepage.component.css
@@ -9,6 +9,7 @@
 #homepage-container {
     height: 100vh;
     background-image: url('/assets/images/homepage-background.jpg');
+    background-attachment: fixed;
     background-size: cover;
     background-position: center;
     position: relative;
